hide/show CRUDE Btns for ROLE

--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -303,7 +303,7 @@
         </div>
         <div style="margin-bottom: 12px; text-align: left">
           <button
-            id="purchaseOrder-Btn"
+            id="addPurchaseOrderBtn"
             class="button"
             onclick="openAddPurchaseOrderForm()"
           >
@@ -401,7 +401,7 @@
         </div>
         <div style="margin-bottom: 12px; text-align: left">
           <button
-            id="withdrawOrder-Btn"
+            id="addWithdrawOrderBtn"
             class="button"
             onclick="openAddWithdrawOrderForm()"
           >
