fix maintenanceApplication CRUD and flow

--- a/Pages/disposalList.html
+++ b/Pages/disposalList.html
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <script type="module" src="../../Java script/disposalList.js"></script>
+  <script src="../Java script/disposalList.js"></script>
 </body>
 
 </html>
