--- a/Pages/disposalList.html
+++ b/Pages/disposalList.html
@@ -47,7 +47,7 @@
           <input type="number" id="newCost" /> -->
 
         <div class="popup-buttons">
-          <button id="addBtnSubmit">➕ إضافة</button>
+          <button id="addBtnSubmit" onclick="addItem()">➕ إضافة</button>
           <button id="editBtnSubmit" onclick="updatePart()" class="hidden">
             ✏️ تعديل
           </button>
@@ -56,8 +56,6 @@
       </div>
     </div>
   </div>
-
-  <script src="../Java script/disposalList.js"></script>
 </body>
 
 </html>
