--- a/Pages/sharedLayout.html
+++ b/Pages/sharedLayout.html
@@ -52,5 +52,5 @@
       <p>اختر قسمًا من القائمة لعرض المحتوى.</p>
     </div>
 </body>
-    <script src="../Java script/sharedLayout.js"></script>
+    <script src="../Java script/dashboards.js"></script>
 </html>
