--- a/Pages/orderList.html
+++ b/Pages/orderList.html
@@ -75,6 +75,14 @@
           <p class="card-description">إدارة ملاحظات مدير المستشفى</p>
           <div class="card-badge active">متاح</div>
         </div>
+
+        <!-- كارت أمر المأمورية -->
+        <div class="application-card" id="missionOrder">
+          <div class="card-icon">🚗</div>
+          <h3 class="card-title">أوامر المأمورية</h3>
+          <p class="card-description">إدارة أوامر المأموريات والمهام</p>
+          <div class="card-badge active">متاح</div>
+        </div>
       </div>
     </div>
 
@@ -689,6 +697,73 @@
               class="btn btn-secondary"
               type="button"
               onclick="closeMissionNoteForm()"
+            >
+              ❌ إلغاء
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <!-- Popup عرض أوامر المأموريات -->
+    <div id="missionOrderPopup" class="popup hidden">
+      <div
+        class="popup-content"
+        style="width: 90%; max-height: 80vh; overflow-y: auto"
+      >
+        <div class="flex-between">
+          <h2>أوامر المأموريات</h2>
+          <button onclick="closeMissionOrderPopup()">❌</button>
+        </div>
+        <div style="margin-bottom: 12px; text-align: left">
+          <button
+            id="addMissionOrderBtn"
+            class="button"
+            onclick="openAddMissionOrderForm()"
+          >
+            ➕ إضافة أمر مأمورية
+          </button>
+        </div>
+        <div id="missionOrdersContainer" class="space-y-2"></div>
+      </div>
+    </div>
+
+    <!-- Popup فورم إضافة / تعديل -->
+    <div id="addMissionOrderPopup" class="popup hidden">
+      <div class="popup-content">
+        <div class="form-header">
+          <h2 id="missionOrderFormTitle">أمر مأمورية جديد</h2>
+          <button
+            type="button"
+            class="close-btn"
+            onclick="closeMissionOrderForm()"
+          >
+            ✕
+          </button>
+        </div>
+        <form id="missionOrderForm" onsubmit="submitMissionOrder(event)">
+          <div class="form-group">
+            <label for="missionNoteSelect">ملاحظة المأمورية</label>
+            <select id="missionNoteSelect" required></select>
+          </div>
+          <div class="form-group">
+            <label for="destination">الوجهة</label>
+            <textarea id="destination" required rows="2"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="startDate">تاريخ البداية</label>
+            <input type="date" id="startDate" required />
+          </div>
+          <div class="form-group">
+            <label for="endDate">تاريخ النهاية</label>
+            <input type="date" id="endDate" required />
+          </div>
+          <div class="form-actions">
+            <button class="btn btn-primary" type="submit">💾 حفظ</button>
+            <button
+              class="btn btn-secondary"
+              type="button"
+              onclick="closeMissionOrderForm()"
             >
               ❌ إلغاء
             </button>
